lib/src/bindings/libsignal_bindings.dart


@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Bool>,
    SignalConstPointerSessionRecord,
    ffi.Uint64,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_session_record_has_usable_sender_chain(
  ffi.Pointer<ffi.Bool> out,
  SignalConstPointerSessionRecord s,
  int now,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Bool>,
    SignalConstPointerSessionRecord,
    SignalConstPointerPublicKey,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_session_record_current_ratchet_key_matches(
  ffi.Pointer<ffi.Bool> out,
  SignalConstPointerSessionRecord s,
  SignalConstPointerPublicKey key,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerSessionRecord>,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_session_record_deserialize(
  ffi.Pointer<SignalMutPointerSessionRecord> out,
  SignalBorrowedBuffer data,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerSessionRecord,
  )
>()
external ffi.Pointer<SignalFfiError> signal_session_record_serialize(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerSessionRecord obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Uint32>,
    SignalConstPointerSessionRecord,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_session_record_get_local_registration_id(
  ffi.Pointer<ffi.Uint32> out,
  SignalConstPointerSessionRecord obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Uint32>,
    SignalConstPointerSessionRecord,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_session_record_get_remote_registration_id(
  ffi.Pointer<ffi.Uint32> out,
  SignalConstPointerSessionRecord obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    SignalConstPointerPreKeyBundle,
    SignalConstPointerProtocolAddress,
    SignalConstPointerFfiSessionStoreStruct,
    SignalConstPointerFfiIdentityKeyStoreStruct,
    ffi.Uint64,
  )
>()
external ffi.Pointer<SignalFfiError> signal_process_prekey_bundle(
  SignalConstPointerPreKeyBundle bundle,
  SignalConstPointerProtocolAddress protocol_address,
  SignalConstPointerFfiSessionStoreStruct session_store,
  SignalConstPointerFfiIdentityKeyStoreStruct identity_key_store,
  int now,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerCiphertextMessage>,
    SignalBorrowedBuffer,
    SignalConstPointerProtocolAddress,
    SignalConstPointerFfiSessionStoreStruct,
    SignalConstPointerFfiIdentityKeyStoreStruct,
    ffi.Uint64,
  )
>()
external ffi.Pointer<SignalFfiError> signal_encrypt_message(
  ffi.Pointer<SignalMutPointerCiphertextMessage> out,
  SignalBorrowedBuffer ptext,
  SignalConstPointerProtocolAddress protocol_address,
  SignalConstPointerFfiSessionStoreStruct session_store,
  SignalConstPointerFfiIdentityKeyStoreStruct identity_key_store,
  int now,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerSignalMessage,
    SignalConstPointerProtocolAddress,
    SignalConstPointerFfiSessionStoreStruct,
    SignalConstPointerFfiIdentityKeyStoreStruct,
  )
>()
external ffi.Pointer<SignalFfiError> signal_decrypt_message(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerSignalMessage message,
  SignalConstPointerProtocolAddress protocol_address,
  SignalConstPointerFfiSessionStoreStruct session_store,
  SignalConstPointerFfiIdentityKeyStoreStruct identity_key_store,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerPreKeySignalMessage,
    SignalConstPointerProtocolAddress,
    SignalConstPointerFfiSessionStoreStruct,
    SignalConstPointerFfiIdentityKeyStoreStruct,
    SignalConstPointerFfiPreKeyStoreStruct,
    SignalConstPointerFfiSignedPreKeyStoreStruct,
    SignalConstPointerFfiKyberPreKeyStoreStruct,
  )
>()
external ffi.Pointer<SignalFfiError> signal_decrypt_pre_key_message(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerPreKeySignalMessage message,
  SignalConstPointerProtocolAddress protocol_address,
  SignalConstPointerFfiSessionStoreStruct session_store,
  SignalConstPointerFfiIdentityKeyStoreStruct identity_key_store,
  SignalConstPointerFfiPreKeyStoreStruct prekey_store,
  SignalConstPointerFfiSignedPreKeyStoreStruct signed_prekey_store,
  SignalConstPointerFfiKyberPreKeyStoreStruct kyber_prekey_store,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerProtocolAddress,
    SignalConstPointerUnidentifiedSenderMessageContent,
    SignalConstPointerFfiIdentityKeyStoreStruct,
  )
>()
external ffi.Pointer<SignalFfiError> signal_sealed_session_cipher_encrypt(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerProtocolAddress destination,
  SignalConstPointerUnidentifiedSenderMessageContent content,
  SignalConstPointerFfiIdentityKeyStoreStruct identity_key_store,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalBorrowedSliceOfConstPointerProtocolAddress,
    SignalBorrowedSliceOfConstPointerSessionRecord,
    SignalBorrowedBuffer,
    SignalConstPointerUnidentifiedSenderMessageContent,
    SignalConstPointerFfiIdentityKeyStoreStruct,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_sealed_sender_multi_recipient_encrypt(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalBorrowedSliceOfConstPointerProtocolAddress recipients,
  SignalBorrowedSliceOfConstPointerSessionRecord recipient_sessions,
  SignalBorrowedBuffer excluded_recipients,
  SignalConstPointerUnidentifiedSenderMessageContent content,
  SignalConstPointerFfiIdentityKeyStoreStruct identity_key_store,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_sealed_sender_multi_recipient_message_for_single_recipient(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalBorrowedBuffer encoded_multi_recipient_message,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerUnidentifiedSenderMessageContent>,
    SignalBorrowedBuffer,
    SignalConstPointerFfiIdentityKeyStoreStruct,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_sealed_session_cipher_decrypt_to_usmc(
  ffi.Pointer<SignalMutPointerUnidentifiedSenderMessageContent> out,
  SignalBorrowedBuffer ctext,
  SignalConstPointerFfiIdentityKeyStoreStruct identity_store,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerSenderKeyDistributionMessage>,
    SignalConstPointerProtocolAddress,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
    SignalConstPointerFfiSenderKeyStoreStruct,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_sender_key_distribution_message_create(
  ffi.Pointer<SignalMutPointerSenderKeyDistributionMessage> out,
  SignalConstPointerProtocolAddress sender,
  ffi.Pointer<ffi.Pointer<ffi.Uint8>> distribution_id,
  SignalConstPointerFfiSenderKeyStoreStruct store,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    SignalConstPointerProtocolAddress,
    SignalConstPointerSenderKeyDistributionMessage,
    SignalConstPointerFfiSenderKeyStoreStruct,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_process_sender_key_distribution_message(
  SignalConstPointerProtocolAddress sender,
  SignalConstPointerSenderKeyDistributionMessage
  sender_key_distribution_message,
  SignalConstPointerFfiSenderKeyStoreStruct store,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerCiphertextMessage>,
    SignalConstPointerProtocolAddress,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
    SignalBorrowedBuffer,
    SignalConstPointerFfiSenderKeyStoreStruct,
  )
>()
external ffi.Pointer<SignalFfiError> signal_group_encrypt_message(
  ffi.Pointer<SignalMutPointerCiphertextMessage> out,
  SignalConstPointerProtocolAddress sender,
  ffi.Pointer<ffi.Pointer<ffi.Uint8>> distribution_id,
  SignalBorrowedBuffer message,
  SignalConstPointerFfiSenderKeyStoreStruct store,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerProtocolAddress,
    SignalBorrowedBuffer,
    SignalConstPointerFfiSenderKeyStoreStruct,
  )
>()
external ffi.Pointer<SignalFfiError> signal_group_decrypt_message(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerProtocolAddress sender,
  SignalBorrowedBuffer message,
  SignalConstPointerFfiSenderKeyStoreStruct store,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(ffi.Pointer<SignalOwnedBuffer>)
>()
external ffi.Pointer<SignalFfiError>
signal_device_transfer_generate_private_key(ffi.Pointer<SignalOwnedBuffer> out);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    ffi.Uint8,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_device_transfer_generate_private_key_with_format(
  ffi.Pointer<SignalOwnedBuffer> out,
  int key_format,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalBorrowedBuffer,
    ffi.Pointer<ffi.Char>,
    ffi.Uint32,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_device_transfer_generate_certificate(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalBorrowedBuffer private_key,
  ffi.Pointer<ffi.Char> name,
  int days_to_expire,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerSgxClientState>,
    SignalBorrowedBuffer,
    SignalBorrowedBuffer,
    ffi.Uint64,
  )
>()
external ffi.Pointer<SignalFfiError> signal_cds2_client_state_new(
  ffi.Pointer<SignalMutPointerSgxClientState> out,
  SignalBorrowedBuffer mrenclave,
  SignalBorrowedBuffer attestation_msg,
  int current_timestamp,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(SignalMutPointerHsmEnclaveClient)
>()
external ffi.Pointer<SignalFfiError> signal_hsm_enclave_client_destroy(
  SignalMutPointerHsmEnclaveClient p,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerHsmEnclaveClient>,
    SignalBorrowedBuffer,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_hsm_enclave_client_new(
  ffi.Pointer<SignalMutPointerHsmEnclaveClient> out,
  SignalBorrowedBuffer trusted_public_key,
  SignalBorrowedBuffer trusted_code_hashes,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    SignalMutPointerHsmEnclaveClient,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_hsm_enclave_client_complete_handshake(
  SignalMutPointerHsmEnclaveClient cli,
  SignalBorrowedBuffer handshake_received,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalMutPointerHsmEnclaveClient,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_hsm_enclave_client_established_send(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalMutPointerHsmEnclaveClient cli,
  SignalBorrowedBuffer plaintext_to_send,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalMutPointerHsmEnclaveClient,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_hsm_enclave_client_established_recv(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalMutPointerHsmEnclaveClient cli,
  SignalBorrowedBuffer received_ciphertext,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerHsmEnclaveClient,
  )
>()
external ffi.Pointer<SignalFfiError> signal_hsm_enclave_client_initial_request(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerHsmEnclaveClient obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(SignalMutPointerSgxClientState)
>()
external ffi.Pointer<SignalFfiError> signal_sgx_client_state_destroy(
  SignalMutPointerSgxClientState p,
);
